--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-calamares-settings-debian (10.0.20-edu4+1.lnd2.7) UNRELEASED; urgency=medium
+calamares-settings-debian (10.0.20-edu4+1.lnd2.8) UNRELEASED; urgency=medium
 
   * fixed bug.
   * 调整依赖
+  * 调整预览包
 
- -- gfdgd xi <gfdgd_xi@gfdgdxi-PC>  Sun, 21 Sep 2025 13:32:27 +0800
+ -- gfdgd xi <gfdgd_xi@gfdgdxi-PC>  Sun, 21 Sep 2025 15:44:33 +0800
 
 calamares-settings-debian (10.0.20-edu4+1.lnd2.4) UNRELEASED; urgency=medium
 
